rendering static files done for project 1

--- a/first_project/templates/first_app/index.html
+++ b/first_project/templates/first_app/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>First App</title>
+    <title>CR7 Page</title>
+    <link rel="stylesheet" href="{% static "css/mystyle.css" %}"/>
   </head>
   <body>
-    <h1>Hello this is index.html</h1>
+    <h1>!!!GOAT ALERT!!!</h1>
+    <img src="{% static "images/cr7.jpg" %}" alt="Uh Oh, didn't show!">
     <!-- below is a template tag -->
-    {{insert_me}}
+    <!-- {{insert_me}} -->
 
   </body>
 </html>
